--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
     --weight-regular: 400;
     
     /* Size */
-    
+    --size-border-radius: 4px;  
 }
 
 /* Universal tags */
@@ -35,12 +35,28 @@
     box-sizing: border-box;
 }
 
+body {
+    /* Font not used*/
+    font-family: 'Open Sans', sans-serif;
+    margin: 0;
+    cursor: default;
+}
+
+a {
+    text-decoration: none;
+    color: var(--color-white);
+}
+
+ul {
+    padding-left: 0;
+}
+
 /* Typography */
 h1 {
-    font-size: : var(--font-large);
+    font-size: var(--font-large);
     font-weight: var(--weight-bold);
     color: var(--color-black);
-    margin: 16px 0px;
+    margin: 16px 0;
 }
 
 h2 {
@@ -55,4 +71,47 @@ h3 {
     font-weight: var(--font-regular);
     color: var(--color-black);
     margin: 8px 0;
+}
+
+p {
+    font-size: var(--font-re);
+    font-weight: var(--font-regular);
+    color: var(--color-dark-grey);
+    margin: 4px 0;
+}
+
+
+/* Navbar */
+#navbar {
+   display: flex;
+   justify-content: space-between;
+   background-color: var(--color-pink);
+   align-items: center;
+   color: var(--color-white);
+   padding: 16px;
+}
+
+.navbar__menu {
+    display: flex;
+}
+
+.navbar__menu__item {
+    padding: 8px 12px;
+    margin: 0 4px;
+    cursor: pointer;
+    border-radius: var(--size-border-radius);
+}
+
+.navbar__logo {
+    font-size: var(--font-medium);
+    font-weight: var(--weight-semi-bold);
+}
+
+.navbar__menu__item.active {
+    border: 1px solid var(--color-white);
+    
+}
+
+.navbar__menu__item:hover {
+    background-color: var(--color-dark-pink );
 }
