--- a/style.css
+++ b/style.css
@@ -28,7 +28,12 @@
     
     /* Size */
     --size-border-radius: 4px;  
-}
+
+    /* Animation*/
+    --animation-duration: 300ms;
+    /*300ms 사용자가 느끼기에 재밌는 애니메이션,
+     그러나 답답하지 않은 standared numbers*/
+} 
 
 /* Universal tags */
 * {
@@ -155,3 +160,67 @@ p {
     border: 2px solid var(--color-white);
     border-radius: var(--size-border-radius);
 }
+
+/* Section common*/
+.section {
+    padding: 50px;
+    text-align: center;
+    max-width: 1200px; /* normal desktop screen size*/
+    margin: auto;
+}
+
+/* About */
+.about__majors {
+    display: flex;
+    justify-content: space-between;
+    margin: 80px 0;
+}
+.major__icon {
+    width: 170px;
+    height: 170px;
+    line-height: 170px;
+    font-size: 70px;
+    /* background-color: yellow; Temp */
+    margin: auto;
+    color: var(--color-blue);
+    border: 1px solid var(--color-blue);
+    border-radius: 50%;
+    margin-bottom: 16px;
+}
+.major__icon i {
+    transition: all var(--animation-duration) ease; 
+    
+}
+
+.major__icon:hover i{
+    color: var(--color-dark-pink);
+    transform: rotate(-30deg) scale(1.1);
+}
+
+.major__title, .major__description {
+    color: var(--color-dark-grey);
+}
+
+.job {
+    display: flex;
+    align-items: center;
+}
+
+.job__description {
+    margin: 0 16px;
+    text-align: left;
+}
+
+.job__name,
+.job__period {
+    color: var(--color-light-grey);
+}
+
+.job__name {
+    font-size: var(--font-small);
+}
+
+.job__period {
+    font-size: var(--font-micro);
+}
+
