--- a/style.css
+++ b/style.css
@@ -1,286 +1,378 @@
 /* Global */
 :root {
-    /* Color */
-    --color-white: #ffffff;
-    --color-light-white: #eeeeee;
-    --color-dark-white: #bdbdbd;
-    --color-pink: #fe918d;
-    --color-dark-pink: #ff6863;
-    --color-dark-grey: #4d4d4d;
-    --color-grey: #616161;
-    --color-light-grey: #7c7979;
-    --color-blue: #73aace;
-    --color-yellow: #fff7d1;
-    --color-orange: #feb546;
-    --color-black: #000000;
-    
-    /* Font size */
-    --font-large: 48px;
-    --font-medium: 28px;
-    --font-regular: 18px;
-    --font-small: 16px;
-    --font-micro: 14px;
-    
-    /* Font weight */
-    --weight-bold: 700;
-    --weight-semi-bold: 600;
-    --weight-regular: 400;
-    
-    /* Size */
-    --size-border-radius: 4px;  
+  /* Color */
+  --color-white: #ffffff;
+  --color-light-white: #eeeeee;
+  --color-dark-white: #bdbdbd;
+  --color-pink: #fe918d;
+  --color-dark-pink: #ff6863;
+  --color-dark-grey: #4d4d4d;
+  --color-grey: #616161;
+  --color-light-grey: #7c7979;
+  --color-blue: #73aace;
+  --color-yellow: #fff7d1;
+  --color-orange: #feb546;
+  --color-black: #000000;
 
-    /* Animation*/
-    --animation-duration: 300ms;
-    /*300ms 사용자가 느끼기에 재밌는 애니메이션,
+  /* Font size */
+  --font-large: 48px;
+  --font-medium: 28px;
+  --font-regular: 18px;
+  --font-small: 16px;
+  --font-micro: 14px;
+
+  /* Font weight */
+  --weight-bold: 700;
+  --weight-semi-bold: 600;
+  --weight-regular: 400;
+
+  /* Size */
+  --size-border-radius: 4px;
+
+  /* Animation*/
+  --animation-duration: 300ms;
+  /*300ms 사용자가 느끼기에 재밌는 애니메이션,
      그러나 답답하지 않은 standared numbers*/
-} 
+}
 
 /* Universal tags */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    /* Font not used*/
-    font-family: 'Open Sans', sans-serif;
-    margin: 0;
-    cursor: default;
+  /* Font not used*/
+  font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  cursor: default;
 }
 
 a {
-    text-decoration: none;
-    color: var(--color-white);
+  text-decoration: none;
+  color: var(--color-white);
 }
 
 ul {
-    padding-left: 0;
+  padding-left: 0;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 button {
-   background-color: transparent;
-   cursor: pointer; 
-   border: none;
-   outline: none;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
 }
 
 /* Typography */
 h1 {
-    font-size: var(--font-large);
-    font-weight: var(--weight-bold);
-    color: var(--color-black);
-    margin: 16px 0;
+  font-size: var(--font-large);
+  font-weight: var(--weight-bold);
+  color: var(--color-black);
+  margin: 16px 0;
 }
 
 h2 {
-    font-size: var(--font-medium);
-    font-weight: var(--weight-semi-bold);
-    color: var(--color-black);
-    margin: 8px 0;
+  font-size: var(--font-medium);
+  font-weight: var(--weight-semi-bold);
+  color: var(--color-black);
+  margin: 8px 0;
 }
 
 h3 {
-    font-size: var(--font-regular);
-    font-weight: var(--font-regular);
-    color: var(--color-black);
-    margin: 8px 0;
+  font-size: var(--font-regular);
+  font-weight: var(--font-regular);
+  color: var(--color-black);
+  margin: 8px 0;
 }
 
 p {
-    font-size: var(--font-re);
-    font-weight: var(--font-regular);
-    color: var(--color-dark-grey);
-    margin: 4px 0;
+  font-size: var(--font-re);
+  font-weight: var(--font-regular);
+  color: var(--color-dark-grey);
+  margin: 4px 0;
 }
-
 
 /* Navbar */
 #navbar {
-   display: flex;
-   justify-content: space-between;
-   background-color: var(--color-pink);
-   align-items: center;
-   color: var(--color-white);
-   padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--color-pink);
+  align-items: center;
+  color: var(--color-white);
+  padding: 16px;
 }
 
 .navbar__menu {
-    display: flex;
+  display: flex;
 }
 
 .navbar__menu__item {
-    padding: 8px 12px;
-    margin: 0 4px;
-    cursor: pointer;
-    border-radius: var(--size-border-radius);
+  padding: 8px 12px;
+  margin: 0 4px;
+  cursor: pointer;
+  border-radius: var(--size-border-radius);
 }
 
 .navbar__logo {
-    font-size: var(--font-medium);
-    font-weight: var(--weight-semi-bold);
+  font-size: var(--font-medium);
+  font-weight: var(--weight-semi-bold);
 }
 
 .navbar__menu__item.active {
-    border: 1px solid var(--color-white);
-    
+  border: 1px solid var(--color-white);
 }
 
 .navbar__menu__item:hover {
-    background-color: var(--color-dark-pink );
+  background-color: var(--color-dark-pink);
 }
 
 /* Home */
 #home {
-    background: url("image/home-background.png") center/cover no-repeat;
-    padding: 40px;
-    text-align: center;
+  background: url('image/home-background.png') center/cover no-repeat;
+  padding: 40px;
+  text-align: center;
 }
 
 .home__avatar {
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-    border: 2px solid var(--color-light-white);
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  border: 2px solid var(--color-light-white);
 }
 
 .home__title,
 .home__description {
-    color: var(--color-white);
+  color: var(--color-white);
 }
 
 .home__contact {
-    color: var(--color-white);
-    font-size: var(--font-regular);
-    font-weight: var(--weight-bold);
-    margin: 24px;
-    padding: 8px 12px;
-    border: 2px solid var(--color-white);
-    border-radius: var(--size-border-radius);
+  color: var(--color-white);
+  font-size: var(--font-regular);
+  font-weight: var(--weight-bold);
+  margin: 24px;
+  padding: 8px 12px;
+  border: 2px solid var(--color-white);
+  border-radius: var(--size-border-radius);
 }
 
 /* Section common*/
 .section {
-    padding: 50px;
-    text-align: center;
-    margin: auto;
+  padding: 50px;
+  text-align: center;
+  margin: auto;
 }
 
 .section__container {
-    max-width: 1200px; /* normal desktop screen size*/
-    margin: auto;
+  max-width: 1200px; /* normal desktop screen size*/
+  margin: auto;
 }
 
 /* About */
 .about__majors {
-    display: flex;
-    justify-content: space-between;
-    margin: 80px 0;
+  display: flex;
+  justify-content: space-between;
+  margin: 80px 0;
 }
 .major__icon {
-    width: 170px;
-    height: 170px;
-    line-height: 170px;
-    font-size: 70px;
-    /* background-color: yellow; Temp */
-    margin: auto;
-    color: var(--color-blue);
-    border: 1px solid var(--color-blue);
-    border-radius: 50%;
-    margin-bottom: 16px;
+  width: 170px;
+  height: 170px;
+  line-height: 170px;
+  font-size: 70px;
+  /* background-color: yellow; Temp */
+  margin: auto;
+  color: var(--color-blue);
+  border: 1px solid var(--color-blue);
+  border-radius: 50%;
+  margin-bottom: 16px;
 }
 .major__icon i {
-    transition: all var(--animation-duration) ease; 
-    
+  transition: all var(--animation-duration) ease;
 }
 
-.major__icon:hover i{
-    color: var(--color-dark-pink);
-    transform: rotate(-30deg) scale(1.1);
+.major__icon:hover i {
+  color: var(--color-dark-pink);
+  transform: rotate(-30deg) scale(1.1);
 }
 
-.major__title, .major__description {
-    color: var(--color-dark-grey);
+.major__title,
+.major__description {
+  color: var(--color-dark-grey);
 }
 
 .job {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .job__description {
-    margin: 0 16px;
-    text-align: left;
+  margin: 0 16px;
+  text-align: left;
 }
 
 .job__name,
 .job__period {
-    color: var(--color-light-grey);
+  color: var(--color-light-grey);
 }
 
 .job__name {
-    font-size: var(--font-small);
+  font-size: var(--font-small);
 }
 
 .job__period {
-    font-size: var(--font-micro);
+  font-size: var(--font-micro);
 }
 
 /* Skill */
 
 #skills {
-    background-color: var(--color-yellow);
+  background-color: var(--color-yellow);
 }
 
 .skillset {
-    display: flex;
-    background-color: var(--color-light-grey);
-    color: var(--color-light-white);
-    margin: 20px 0;
+  display: flex;
+  background-color: var(--color-light-grey);
+  color: var(--color-light-white);
+  margin: 20px 0;
 }
 
 .skillset__title {
-    color: var(--color-white);
+  color: var(--color-white);
 }
 
 .skillset__left {
-    flex-basis: 60%;
-    background-color: var(--color-dark-grey);
-    padding: 20px 40px;
+  flex-basis: 60%;
+  background-color: var(--color-dark-grey);
+  padding: 20px 40px;
 }
 .skill {
-    margin-bottom: 32px;
+  margin-bottom: 32px;
 }
 
 .skill__bar {
-    width: 100%;
-    height: 3px;
-    background-color: var(--color-grey);
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-grey);
 }
 
 .skill__value {
-
-    height: 3px;
-    background-color: var(--color-orange);
-
+  height: 3px;
+  background-color: var(--color-orange);
 }
 
 .skill__description {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .skillset__right {
-    flex-basis: 40%;
-
+  flex-basis: 40%;
 }
 
 .tools {
-    background-color: var(--color-grey);
+  background-color: var(--color-grey);
 }
 
-.tools, .etc {
-    padding: 20px;
+.tools,
+.etc {
+  padding: 20px;
+}
+
+/* Work */
+
+.work__categories {
+  margin: 40px;
+}
+
+.category__btn {
+  border: 1px solid var(--color-dark-white);
+  border-radius: var(--size-border-radius);
+  font-size: var(--font-regular);
+  padding: 8px 48px;
+}
+
+.category__btn.active,
+.category__btn:hover {
+  background-color: var(--color-pink);
+  color: var(--color-white);
+}
+
+.category__btn.active .category__count,
+.category__btn:hover .category__count {
+  opacity: 1;
+  top: 0;
+}
+.category__count {
+  background-color: var(--color-orange);
+  border-radius: 50%;
+  color: var(--color-white);
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  display: inline-block;
+  position: relative;
+  top: -20px;
+  left: 4px;
+  opacity: 0;
+  transition: all var(--animation-duration) ease-in;
+}
+
+.work__projects {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.project {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 280px;
+  height: 250px;
+  margin: 2px;
+  background-color: var(--color-light-white);
+}
+
+.project__img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.project__description {
+  position: absolute;
+  background-color: var(--color-black);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transform: translateY(10px);
+  transition: all var(--animation-duration) ease-in;
+}
+
+.project:hover .project__description {
+  opacity: 0.8;
+  transform: translateY(0px);
+}
+.project__description h3 {
+  color: var(--color-white);
+}
+
+.project__description h3:after {
+  content: '';
+  display: block;
+  position: relative;
+  left: 50%;
+  width: 25px;
+  height: 2px;
+  margin-left: -12px;
+  margin-top: 8px;
+  background-color: var(--color-dark-white);
 }
