--- a/js_answer/style.css
+++ b/js_answer/style.css
@@ -6,6 +6,7 @@
   --color-dark-white: #bdbdbd;
   --color-pink: #fe918d;
   --color-dark-pink: #ff6863;
+  --color-black: #4d4d4d;
   --color-dark-grey: #4d4d4d;
   --color-grey: #616161;
   --color-light-grey: #7c7979;
@@ -29,10 +30,8 @@
   /* Size */
   --size-border-radius: 4px;
 
-  /* Animation*/
+  /* Annimation */
   --animation-duration: 300ms;
-  /*300ms 사용자가 느끼기에 재밌는 애니메이션,
-     그러나 답답하지 않은 standared numbers*/
 }
 
 /* Universal tags */
@@ -41,10 +40,8 @@
 }
 
 body {
-  /* Font not used*/
   font-family: 'Open Sans', sans-serif;
   margin: 0;
-  cursor: default;
 }
 
 a {
@@ -72,7 +69,7 @@ h1 {
   font-size: var(--font-large);
   font-weight: var(--weight-bold);
   color: var(--color-black);
-  margin: 16px 0;
+  margin: 16px 0px;
 }
 
 h2 {
@@ -90,9 +87,9 @@ h3 {
 }
 
 p {
-  font-size: var(--font-re);
+  font-size: var(--font-regular);
   font-weight: var(--font-regular);
-  color: var(--color-dark-grey);
+  color: var(--color-black);
   margin: 4px 0;
 }
 
@@ -102,17 +99,22 @@ p {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  background-color: var(--color-pink);
   align-items: center;
-  color: var(--color-white);
   padding: 16px;
   background-color: transparent;
   transition: all var(--animation-duration) ease-in-out;
+  z-index: 1;
 }
 
 #navbar.navbar--dark {
-  background-color: var(--color-blue);
-  padding: 5px;
+  background-color: var(--color-pink);
+  padding: 8px;
+}
+
+.navbar__logo {
+  font-size: var(--font-medium);
+  font-weight: var(--weight-semi-bold);
+  color: white;
 }
 
 .navbar__menu {
@@ -122,20 +124,14 @@ p {
 .navbar__menu__item {
   padding: 8px 12px;
   margin: 0 4px;
+  color: var(--color-white);
   cursor: pointer;
+  border: 1px solid transparent;
   border-radius: var(--size-border-radius);
 }
 
-.navbar__logo {
-  font-size: var(--font-medium);
-  font-weight: var(--weight-semi-bold);
-}
-
-.navbar__menu__item.active {
-  border: 1px solid var(--color-white);
-}
-
 .navbar__menu__item:hover {
+  border-color: var(--color-white);
   background-color: var(--color-dark-pink);
 }
 
@@ -148,30 +144,9 @@ p {
   display: none;
 }
 
-.about__majors {
-  flex-direction: column;
-}
-
-.major {
-  margin-bottom: 38px;
-}
-
-.skillset {
-  flex-direction: column;
-}
-
-.project {
-  flex-grow: 1;
-}
-
-.testimonial__avatar {
-  width: 80px;
-  height: 80px;
-}
-
 /* Home */
 #home {
-  background: url('image/home-background.png') center/cover no-repeat;
+  background: url('imgs/home-background.png') center/cover no-repeat;
   padding: 40px;
   padding-top: 120px;
   text-align: center;
@@ -199,7 +174,7 @@ p {
   border-radius: var(--size-border-radius);
 }
 
-/* Section common*/
+/* Section common */
 .section {
   padding: 50px;
   text-align: center;
@@ -207,7 +182,7 @@ p {
 }
 
 .section__container {
-  max-width: 1200px; /* normal desktop screen size*/
+  max-width: 1200px;
   margin: auto;
 }
 
@@ -217,30 +192,35 @@ p {
   justify-content: space-between;
   margin: 80px 0;
 }
+
 .major__icon {
   width: 170px;
   height: 170px;
   line-height: 170px;
   font-size: 70px;
-  /* background-color: yellow; Temp */
   margin: auto;
   color: var(--color-blue);
   border: 1px solid var(--color-blue);
   border-radius: 50%;
   margin-bottom: 16px;
 }
+
 .major__icon i {
   transition: all var(--animation-duration) ease;
 }
 
 .major__icon:hover i {
-  color: var(--color-dark-pink);
+  color: var(--color-pink);
   transform: rotate(-30deg) scale(1.1);
 }
 
 .major__title,
 .major__description {
   color: var(--color-dark-grey);
+}
+
+.major__description {
+  font-size: var(--font-small);
 }
 
 .job {
@@ -282,14 +262,18 @@ p {
 .skillset__title {
   color: var(--color-white);
 }
-
 .skillset__left {
   flex-basis: 60%;
   background-color: var(--color-dark-grey);
   padding: 20px 40px;
 }
+
 .skill {
   margin-bottom: 32px;
+}
+.skill__description {
+  display: flex;
+  justify-content: space-between;
 }
 
 .skill__bar {
@@ -301,11 +285,6 @@ p {
 .skill__value {
   height: 3px;
   background-color: var(--color-orange);
-}
-
-.skill__description {
-  display: flex;
-  justify-content: space-between;
 }
 
 .skillset__right {
@@ -334,17 +313,18 @@ p {
   padding: 8px 48px;
 }
 
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
   background-color: var(--color-pink);
   color: var(--color-white);
 }
 
-.category__btn.active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count {
   opacity: 1;
   top: 0;
 }
+
 .category__count {
   background-color: var(--color-orange);
   border-radius: 50%;
@@ -364,6 +344,13 @@ p {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  opacity: 1;
+  transition: all var(--animation-duration) ease-out;
+}
+
+.work__projects.anim-out {
+  opacity: 0;
+  transform: scale(0.96) translateY(40px);
 }
 
 .project {
@@ -377,14 +364,19 @@ p {
   background-color: var(--color-light-white);
 }
 
+.project.invisible {
+  display: none;
+}
+
 .project__img {
   max-width: 100%;
   max-height: 100%;
+  align-self: center;
 }
 
 .project__description {
   position: absolute;
-  background-color: var(--color-black);
+  background-color: black;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -401,8 +393,9 @@ p {
   opacity: 0.8;
   transform: translateY(0px);
 }
+
 .project__description h3 {
-  color: var(--color-white);
+  color: var(--color-orange);
 }
 
 .project__description h3:after {
@@ -410,9 +403,9 @@ p {
   display: block;
   position: relative;
   left: 50%;
-  width: 25px;
+  width: 50px;
   height: 2px;
-  margin-left: -12px;
+  transform: translateX(-50%);
   margin-top: 8px;
   background-color: var(--color-dark-white);
 }
@@ -435,7 +428,6 @@ p {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  margin: 12px;
 }
 
 .testimonial__avatar:nth-child(odd) {
@@ -445,6 +437,7 @@ p {
 .testimonial__avatar:nth-child(even) {
   margin-left: 40px;
 }
+
 .testimonial__speech-bubble {
   padding: 18px;
   background-color: var(--color-white);
@@ -464,41 +457,92 @@ p {
   background-color: var(--color-pink);
 }
 
-.contact__title {
-  margin: 32px;
-}
-
 .contact__title,
 .contact__email,
 .contact__rights {
   color: var(--color-white);
 }
 
+.contact__title {
+  margin: 32px 0;
+}
+
 .contact__links {
   font-size: var(--font-large);
   margin: 24px 0;
+  transition: all var(--animation-duration) ease-in;
 }
 
 .contact__links i:hover {
   transform: scale(1.1);
   color: var(--color-yellow);
-  transition: all var(--animation-duration) ease-in;
 }
 
-/* For below 768px screen width  */
+/* Scroll */
+.arrow-up {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 70px;
+  height: 70px;
+  font-size: 50px;
+  color: var(--color-white);
+  background-color: var(--color-pink);
+  border-radius: 50%;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 300ms ease-in;
+}
+
+.arrow-up.visible {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+/* For below 768px screen width */
 @media screen and (max-width: 768px) {
   .navbar__toggle-btn {
     display: block;
   }
+
   #navbar {
     flex-direction: column;
     align-items: flex-start;
+    background-color: var(--color-pink);
   }
 
+  #navbar.navbar--dark {
+    padding: 16px;
+  }
   .navbar__menu {
     flex-direction: column;
     text-align: center;
     width: 100%;
     display: none;
+  }
+
+  .navbar__menu.open {
+    display: block;
+  }
+
+  .about__majors {
+    flex-direction: column;
+  }
+
+  .major {
+    margin-bottom: 38px;
+  }
+
+  .skillset {
+    flex-direction: column;
+  }
+
+  .project {
+    flex-grow: 1;
+  }
+
+  .testimonial__avatar {
+    width: 80px;
+    height: 80px;
   }
 }
