--- a/style.css
+++ b/style.css
@@ -149,20 +149,8 @@ p {
   display: none;
 }
 
-.about__majors {
-  flex-direction: column;
-}
-
-.major {
-  margin-bottom: 38px;
-}
-
 .skillset {
   flex-direction: column;
-}
-
-.project {
-  flex-grow: 1;
 }
 
 .testimonial__avatar {
@@ -213,9 +201,15 @@ p {
 }
 
 /* About */
+
+.major {
+  margin-bottom: 38px;
+}
+
 .about__majors {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
   margin: 80px 0;
 }
 .major__icon {
@@ -365,17 +359,29 @@ p {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  opacity: 1;
+  transition: all var(--animation-duration) ease-out;
+}
+
+.work__projects.anim-out {
+  opacity: 0;
+  transform: scale(0.96) translateY(40px);
 }
 
 .project {
   position: relative;
   display: flex;
+  flex-grow: 1;
   justify-content: center;
   align-items: center;
   width: 280px;
   height: 250px;
   margin: 2px;
   background-color: var(--color-light-white);
+}
+
+.project.invisible {
+  display: none;
 }
 
 .project__img {
