--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ p {
   margin: 0 4px;
   cursor: pointer;
   border-radius: var(--size-border-radius);
+  border: 1px solid transparent;
 }
 
 .navbar__logo {
@@ -132,12 +133,9 @@ p {
   font-weight: var(--weight-semi-bold);
 }
 
-.navbar__menu__item.active {
-  border: 1px solid var(--color-white);
-}
-
 .navbar__menu__item:hover {
-  background-color: var(--color-dark-pink);
+  border-color: var(--color-white);
+  background-color: var(--color-blue);
 }
 
 .navbar__toggle-btn {
@@ -329,13 +327,13 @@ p {
   padding: 8px 48px;
 }
 
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
   background-color: var(--color-pink);
   color: var(--color-white);
 }
 
-.category__btn.active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count {
   opacity: 1;
   top: 0;
