--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ li {
   list-style: none;
 }
 
+blockquote {
+  color: #7c7979;
+}
+
 button {
   background-color: transparent;
   cursor: pointer;
@@ -68,6 +72,7 @@ button {
   outline: none;
   padding: 0;
 }
+
 
 /* Typography */
 h1 {
